refactor: simplify memshell generate map register